# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import netflixRouter from "./netflix";
+import authRouter from "./auth";
+import adminRouter from "./admin";
+import publicSitesRouter from "./publicSites";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(netflixRouter);
+router.use(authRouter);
+router.use(adminRouter);
+router.use(publicSitesRouter);
 
 export default router;
